Updated website page header and using Ubuntu fonts
Added a local style to over-ride the colour of the jumbotron

Added Ubuntu font family using Google Fonts Content Delivery Network (CDN)

Moved title and jumbotron to its own component website-title.  Using
`practicalli-jumbotron` theme of Clojure green background and white text

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,2 +1,9 @@
 /* some style */
 
+/* Customise Bootstrap jumbotron */
+
+.practicalli-jumbotron {
+    background-color: #63b132;
+    color: white;
+    font-family: Ubuntu, sans-serif;
+}
